Upgrading library to work with Java 7